<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperSenior</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="reminder_name">Reminder Name</string>
    <string name="take_medicine_1">Take cold Medicine</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="medicine_name_1">Sore throat Pills</string>
    <string name="qty_1">0</string>
    
    <string name="frequency">Frequency</string>
    <string name="quantity">Quantity</string>
    <string name="num_per_day">time(s)/day</string>
    
    <string name="create_pulse_record">Create Pulse Record</string>
    <string name="create_temp_record">Create Temperature Record</string>
    <string name="create_pressure_record">Create Pressure Record</string>
    <string name="edit_pulse_record">Edit Pulse Record</string>
    <string name="measure">Health Measure</string>
    <string name="pulse">Pulse</string>
    <string name="pulse_hint">pulse in min</string>
    <string name="temperature">Body Temperature</string>
    <string name="temp_hint">temp in Celsius</string>
    <string name="pressure">Blood Pressure</string>
    <string name="systolic_hint">systolic in mmHg</string>
    <string name="diastolic_hint">diastolic in mmHg</string>
    <string name="status">View Status</string>
    <string name="walkingstep">Walking Steps</string>
    <string name="pulse_value">Pulse Value</string>
    <string name="pulse_unit">min</string>
    <string name="systolic_value">Systolic</string>
    <string name="diastolic_value">Diastolic</string>
    <string name="pressure_unit">mmHg</string>
	<string name="temperature_value">Temperature</string>
	<string name="temperature_unit">Celsius</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="posture">Posture</string>
    <string name="remarks">Remarks</string>
    
    <string name="personal_info">Personal Information</string>
    <string name="name">Name</string>
    <string name="name_hint">Your Name</string>
    <string name="age">Age</string>
    <string name="age_hint">Your Age</string>
    <string name="weight_hint">Your Weight (in Kg)</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="weight_unit">kg</string>
    <string name="guardian_info">Guardian Information</string>
    <string name="guardian_relation">Guardian Relation</string>
    <string name="relation_hint">Son</string>
    <string name="guardian_email">Email Address</string>
    <string name="email_hint">name@hotmail.com</string>
    <string name="guardian_phone">Phone Number</string>
    <string name="phone_hint">87654321</string>
    <string name="dropbox">Dropbox</string>
    <string name="googledrive">Google Drive</string>
    <string name="cloud_account">Cloud Account</string>
    <string name="thresholds">Thresholds</string>
    <string name="settings">Settings</string>
    <string name="pin_activate">Activate Security Pin</string>
    <string name="auto_measure_time">Auto-measure Time</string>
    <string name="time_button">Select Time</string>
    
    <string name="r_arm">Right Arm</string>
    <string name="l_arm">Left Arm</string>
    <string name="r_wrist">Right Wrist</string>
    <string name="l_wrist">Left Wrist</string>
    
    <string name="seated">Seated</string>
    <string name="upright">Upright</string>
    <string name="horizontal">Horizontal</string>
    <string name="reclined">Reclined</string>
    
    <string name="selectall">Select All</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <string name="threshold">Threshould</string>
    <string name="new_record">New Record</string>
    <string name="auto_measure">Auto Measure Results</string>
    <string name="measure_results"> Pulse:  75/min\n
        Blood Pressure: 112/76 mmHg
        Body Temperature:  36.9℃\n
         </string>    
    
    <string name="available_devices">Available Devices:</string>
    
	<string name ="recent_sync_measurement">Recent Sync Measurements:</string>
    

</resources>
